--- a/Labs/Lab09/Makefile
+++ b/Labs/Lab09/Makefile
@@ -2,6 +2,10 @@ CC = gcc
 AS = as
 CFLAGS = -std=c99 -Wall -Werror -g
 
+counte: counte.c counte.s
+time: time.c time.s
+list_primes: list_primes.c is_prime.s
+
 %.o: %.c
 	$(CC) -c $< -o $@
 
